texlive-bin (2011.20120507-2) unstable; urgency=low

  * UNRELEASED
  * debian/patches/xdvi-zoom-with-eps-figures.patch: Make zooming with
    Ghostscript 9.0x working correctly. EPS figures were cut off after
    zooming and scrolling. (Taken from Ubuntu packaging, thanks Jeremy Bicha)
    See http://bugs.ghostscript.com/show_bug.cgi?id=692540

 -- Norbert Preining <preining@debian.org>  Mon, 07 May 2012 12:52:39 +0900

texlive-bin (2011.20120507-1) unstable; urgency=low

  * new upstream checkout: uptex 1.10
  * drop patches for config file inclusion in (x)dvipdfmx, included upstream
  * add man page for etex
  * include pmpost patches and build it
  * adapt/unfuzzify patches for current sources
  * disable mtx building, we have prepmx package in Debian

 -- Norbert Preining <preining@debian.org>  Mon, 07 May 2012 10:47:49 +0900

texlive-bin (2011.20120410-1) unstable; urgency=low

  * new upstream checkout:
    - remove decls of popen and pclose (Closes: #64524) (!yow, 5 digit bug!)
    - do not declare getopt in C++, fixes FTBFS with g++ >= 4.7 
      (Closes: #667392)
  * add patches (maybe to be included upstream) that allows inclusion of
    one config file in another for (x)dvipdfmx. This will be
    used by the paper code.
  * fix description of libptexenc-dev package (Closes: #667694)
  * remove xdvik patch, included upstream
  * remove conflict with ptex-bin, we are building a transitional package now
  * build with internal t1lib, as t1lib is going to disappear in
    wheezy (Closes: #667912) (no, dropping xdvi is not an option!)
    (add a lintian override otherwise this gives a lintian error)

 -- Norbert Preining <preining@debian.org>  Tue, 10 Apr 2012 10:16:01 +0900

texlive-bin (2011.20120328-1) unstable; urgency=low

  * build with system libgraphite, adapt build dependencies
  * remove embedded source copies of several libs (Closes: #665792)
  * remove .svn directories from orig tarball